creating css for the chat app

--- a/Training_6_socketio/css/codeSchoolChat.css
+++ b/Training_6_socketio/css/codeSchoolChat.css
@@ -13,6 +13,11 @@ h1 {
     width: 200px;
     height: 100%;
     border-right: 1px solid #606060;
+}
+#user_list_div_ul{
+    list-style-type: none;
+    font-family: "Arial";
+    color:CADETBLUE;
     text-transform: uppercase;
 }
 #chat_box_div{
@@ -24,7 +29,15 @@ h1 {
 #chat_box_input_div{
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 599px;
     border-top: 1px solid #606060;
-    padding: 5px;
+}
+#chat_input{
+    position: relative;
+    padding:5px;
+    width: 520px;
+    border:none;
+}
+#chat_submit {
+    position: relative;
 }
